--- a/app/views/pages/votesfake.html.erb
+++ b/app/views/pages/votesfake.html.erb
@@ -55,17 +55,26 @@
 
 				</script>
 		<div id="pie-vote-fake"		style="width:225px; height:225px;"></div>
-			</div>
-			<div class="whole-page middle-section">
-				<h3>Ranking in <%= current_user.school.name%></h3>
+		</div>
+		<div class="whole-page middle-section">
+			
+				<h3>Position in Twittest</h3>
+					<% @twittest_leaderboard.each do |user| %>
+						<div>
+							<span style="float:right"><%= user.position_twittest_my_vote_fake %> (<%= user.score_my_vote_fake %>)</span>
+							<%= user.name %>
+						</div>
+					<% end %>
+					
+				<hr />	
+				<h3>Position in <%= current_user.school.name%></h3>
 				<% @school_leaderboard.each do |user| %>
 					<div>
 						<span style="float:right"><%= user.position_in_school_my_votes_fake %> (<%= user.score_my_vote_fake %>)</span>
 						<%= user.name %>
 					</div>
 				<% end %>
-				<hr />
-				<h3>Ranking on Twittest</h3>
+				
 				
 			</div>
 		<div class="whole-page right-section">
