--- a/app/views/pages/votingreal.html.erb
+++ b/app/views/pages/votingreal.html.erb
@@ -64,7 +64,16 @@
 			<div id="pie-tweet-real" style="width:225px; height:225px;"></div>
 		</div>
 			<div class="whole-page middle-section">
-				<h3>Ranking in <%= current_user.school.name%></h3>
+				
+				<h3>Position in Twittest</h3>
+				<% @twittest_leaderboard.each do |user| %>
+					<div>
+						<span style="float:right"><%= user.position_twittest_voting_my_real %> (<%= user.score_voting_my_real %>)</span>
+						<%= user.name %>
+					</div>
+				<% end %>
+				<hr />
+				<h3>Position in <%= current_user.school.name%></h3>
 					<% @school_leaderboard.each do |user| %>
 						<div>
 							<span style="float:right"><%= user.position_in_school_voting_my_real %> (<%= user.score_voting_my_real %>)</span>
@@ -72,12 +81,7 @@
 						</div>
 					<% end %>
 
-				<hr>
-
-					<h3>Ranking on Twittest</h3>
-					<p>
-	
-					</p>
+			
 
 			</div>
 			<div class="whole-page right-section">
