--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -5,11 +5,11 @@
 	  <%= render 'shared/error_messages', :object => f.object %>
 	<div class="field">
 	  <%= f.label :name %><br />
-	  <%= f.text_field :name %>
+	  <%= @user.name %>
 	</div>
 	<div class="field">
 	  <%= f.label :email %><br />
-	  <%= f.text_field :email %>
+	  <%= @user.email %>
 	</div>
 	
 	<div class="field">
