Remove scores from pages

--- a/app/views/pages/votesreal.html.erb
+++ b/app/views/pages/votesreal.html.erb
@@ -55,7 +55,7 @@
 		<h3>Position in Twittest</h3>
 		<% @twittest_leaderboard.each do |user| %>
 			<div>
-				<span style="float:right"><%= user.position_twittest_my_vote_real %> (<%= user.score_my_vote_real %>)</span>
+				<span style="float:right"><%= user.position_twittest_my_vote_real %> </span>
 				<%= user.name %>
 			</div>
 		<% end %>
@@ -63,7 +63,7 @@
 		<h3>Position in <%= current_user.school.name%></h3>
 		<% @school_leaderboard.each do |user| %>
 			<div>
-				<span style="float:right"><%= user.position_in_school_my_votes_real %> (<%= user.score_my_vote_real %>)</span>
+				<span style="float:right"><%= user.position_in_school_my_votes_real %> </span>
 				<%= user.name %>
 			</div>
 		<% end %>
