--- a/app/views/pages/votingfake.html.erb
+++ b/app/views/pages/votingfake.html.erb
@@ -61,7 +61,7 @@
 					<h3>Position in Twittest</h3>
 					<% @twittest_leaderboard.each do |user| %>
 						<div>
-							<span style="float:right"><%= user.position_twittest_voting_my_fake %> (<%= user.score_voting_my_fake %>)</span>
+							<span style="float:right"><%= user.position_twittest_voting_my_fake %> </span>
 							<%= user.name %>
 						</div>
 					<% end %>
@@ -69,7 +69,7 @@
 				<h3>Position in <%= current_user.school.name%></h3>
 					<% @school_leaderboard.each do |user| %>
 						<div>
-							<span style="float:right"><%= user.position_in_school_voting_my_fake %> (<%= user.score_voting_my_fake %>)</span>
+							<span style="float:right"><%= user.position_in_school_voting_my_fake %> </span>
 							<%= user.name %>
 						</div>
 					<% end %>
