--- a/app/views/pages/votesfake.html.erb
+++ b/app/views/pages/votesfake.html.erb
@@ -61,7 +61,7 @@
 				<h3>Position in Twittest</h3>
 					<% @twittest_leaderboard.each do |user| %>
 						<div>
-							<span style="float:right"><%= user.position_twittest_my_vote_fake %> (<%= user.score_my_vote_fake %>)</span>
+							<span style="float:right"><%= user.position_twittest_my_vote_fake %> </span>
 							<%= user.name %>
 						</div>
 					<% end %>
@@ -70,7 +70,7 @@
 				<h3>Position in <%= current_user.school.name%></h3>
 				<% @school_leaderboard.each do |user| %>
 					<div>
-						<span style="float:right"><%= user.position_in_school_my_votes_fake %> (<%= user.score_my_vote_fake %>)</span>
+						<span style="float:right"><%= user.position_in_school_my_votes_fake %> </span>
 						<%= user.name %>
 					</div>
 				<% end %>
