--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -5,31 +5,30 @@
 
 <hr />
 
-<h2>Ranking in my school: <%= current_user.position_in_school %></h2>
-<% @myschool_leaderboard.each do |user| %>
-	<div>
-		<span style="float:right"><%= user.position_in_school %> (<%= user.score %>)</span>
-		<%= user.name %>
-	</div>
-<% end %>
-
-
-<hr />
-
-<h2>Ranking overall on Twittest: <%= current_user.position_overall %></h2>
+<h2>Postion overall in Twittest: <%= current_user.position_overall %></h2>
 <% @twittest_leaderboard.each do |user| %>
 	<div>
-		<span style="float:right"><%= user.position_overall %> (<%= user.score %>)</span>
+		<span style="float:right"><%= user.position_overall %></span>
 		<%= user.name %>
 	</div>
 <% end %>
 
 <hr />
 
-<h2>Ranking of my School on Twittest: <%= current_user.school.position_overall %></h2>
+<h2>Postion in my school: <%= current_user.position_in_school %></h2>
+<% @myschool_leaderboard.each do |user| %>
+	<div>
+		<span style="float:right"><%= user.position_in_school %></span>
+		<%= user.name %>
+	</div>
+<% end %>
+
+<hr />
+
+<h2>Postion of my School in Twittest: <%= current_user.school.position_overall %></h2>
 <% @school_leaderboard.each do |school| %>
 	<div>
-		<span style="float:right"><%= school.position_overall %> (<%= school.score %>)</span>
+		<span style="float:right"><%= school.position_overall %></span>
 		<%= school.name %>
 	</div>
 <% end %>
