Started conversations - none tweet owner

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -21,7 +21,7 @@
 	
 	<% # f.collection_select :turing_user_id, TuringUser.all, :id, :name, :prompt => true  %>
 	
-	<span id="charsLeft"></span>
+	<span id="charsLeft" class="charsLeft"></span>
 	
 	<script type="text/javascript">
 	    var val = $('#micropost_content').val();
