--- a/app/views/pages/_home_signed_in.html.erb
+++ b/app/views/pages/_home_signed_in.html.erb
@@ -10,6 +10,7 @@
 		<ul class="stream-tabs">
 			<li class="stream-tab-active"><%= link_to "Timeline", root_path, :class => 'tab-text'%></li>
 			<li class="stream-tab"><%= link_to "My Tweets", mytweets_path, :class => 'tab-text'%></li>
+			<li class="stream-tab"><%= link_to "My Conversations", conversations_path, :class => 'tab-text'%></li>
 		</ul>
 	</div>
 	<div class="stream-manager">
