--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,4 +1,4 @@
 <% unless @feed_items.empty? %>
-  <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
+  <%= render :partial => 'shared/feed_item', :collection => @feed_items, :locals => {:conversation => @conversation} %>
   <%= will_paginate @feed_items %>
 <% end %>
