--- a/app/views/pages/_home_signed_in.html.erb
+++ b/app/views/pages/_home_signed_in.html.erb
@@ -9,8 +9,9 @@
 		</div>
 		<ul class="stream-tabs">
 			<li class="stream-tab-active"><%= link_to "Timeline", root_path, :class => 'tab-text'%></li>
+			<li class="stream-tab"><%= link_to "Vote on Tweets", voteontweets_path, :class => 'tab-text'%></li>
 			<li class="stream-tab"><%= link_to "My Tweets", mytweets_path, :class => 'tab-text'%></li>
-			<li class="stream-tab"><%= link_to "My Conversations", conversations_path, :class => 'tab-text'%></li>
+			<li class="stream-tab"><%= link_to "My Conversations", myconversations_path, :class => 'tab-text'%></li>
 		</ul>
 	</div>
 	<div class="stream-manager">
