--- a/app/views/pages/mytweets.html.erb
+++ b/app/views/pages/mytweets.html.erb
@@ -4,12 +4,7 @@
 			<h2>What's happening?</h2>
       		<%= render 'shared/micropost_form' %>
 		</div>
-		<ul class="stream-tabs">
-			<li class="stream-tab"><%= link_to "Timeline", root_path, :class => 'tab-text'%></li>
-			<li class="stream-tab"><%= link_to "Vote on Tweets", voteontweets_path, :class => 'tab-text'%></li>
-			<li class="stream-tab-active"><%= link_to "My Tweets", mytweets_path, :class => 'tab-text'%></li>
-			<li class="stream-tab"><%= link_to "My Conversations", myconversations_path, :class => 'tab-text'%></li>
-		</ul>
+		<%= render 'shared/tweets_menu' %>
 	</div>
 	<div class="stream-manager">
 	  <div class="stream-container">
