--- a/app/views/shared/_tweets_menu.html.erb
+++ b/app/views/shared/_tweets_menu.html.erb
@@ -2,5 +2,5 @@
 	<li class="stream-tab<% if request.request_uri == root_path %>-active<% end %>"><%= link_to "Timeline", root_path, :class => 'tab-text'%></li>
 	<li class="stream-tab<% if request.request_uri == voteontweets_path %>-active<% end %>"><%= link_to "Vote on Tweets", voteontweets_path, :class => 'tab-text'%></li>
 	<li class="stream-tab<% if request.request_uri == mytweets_path %>-active<% end %>"><%= link_to "My Tweets", mytweets_path, :class => 'tab-text'%></li>
-	<li class="stream-tab<% if request.request_uri == myconversations_path %>-active<% end %>"><%= link_to "My Conversations", myconversations_path, :class => 'tab-text'%></li>
+	<li class="stream-tab<% if request.request_uri == myconversations_path %>-active<% end %>"><%= link_to "Conversations on My Tweets", myconversations_path, :class => 'tab-text'%></li>
 </ul>
