--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,8 @@
 	<nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-
-	<% if signed_in? %>
-<li><%= link_to "Users", users_path %></li>
-<% end %>
-    </ul>
+      <li><%=link_to "Teachers Pack", about_path %></li>
+	 <li><%=link_to "Register Interest", about_path %></li>
+</ul>
   </nav>
 </footer>
