--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 	<nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
-      <li><%=link_to "Teachers Pack", about_path %></li>
+      <li><%=link_to "Teachers Activity Pack", activityone_path %></li>
 	 <li><%=link_to "Register Interest", about_path %></li>
 </ul>
   </nav>
