--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -5,7 +5,7 @@
 
 <hr />
 
-<h2>Postion overall in Twittest: <%= current_user.position_overall %></h2>
+<h2>Position overall in Twittest: <%= current_user.position_overall %></h2>
 <% @twittest_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_overall %></span>
@@ -15,7 +15,7 @@
 
 <hr />
 
-<h2>Postion in my school: <%= current_user.position_in_school %></h2>
+<h2>Position in my school: <%= current_user.position_in_school %></h2>
 <% @myschool_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_in_school %></span>
@@ -25,7 +25,7 @@
 
 <hr />
 
-<h2>Postion of my School in Twittest: <%= current_user.school.position_overall %></h2>
+<h2>Position of my School in Twittest: <%= current_user.school.position_overall %></h2>
 <% @school_leaderboard.each do |school| %>
 	<div>
 		<span style="float:right"><%= school.position_overall %></span>
