--- a/app/views/pages/votesreal.html.erb
+++ b/app/views/pages/votesreal.html.erb
@@ -56,7 +56,7 @@
 		<% @twittest_leaderboard.each do |user| %>
 			<div>
 				<span style="float:right"><%= user.position_twittest_my_vote_real %> </span>
-				<%= user.name %>
+				<%= user.display_name %>
 			</div>
 		<% end %>
 		<hr />
@@ -64,7 +64,7 @@
 		<% @school_leaderboard.each do |user| %>
 			<div>
 				<span style="float:right"><%= user.position_in_school_my_votes_real %> </span>
-				<%= user.name %>
+				<%= user.display_name %>
 			</div>
 		<% end %>
 	</div>
