--- a/app/views/pages/votingreal.html.erb
+++ b/app/views/pages/votingreal.html.erb
@@ -69,7 +69,7 @@
 				<% @twittest_leaderboard.each do |user| %>
 					<div>
 						<span style="float:right"><%= user.position_twittest_voting_my_real %> </span>
-						<%= user.name %>
+						<%= user.display_name %>
 					</div>
 				<% end %>
 				<hr />
@@ -77,7 +77,7 @@
 					<% @school_leaderboard.each do |user| %>
 						<div>
 							<span style="float:right"><%= user.position_in_school_voting_my_real %> </span>
-							<%= user.name %>
+							<%= user.display_name %>
 						</div>
 					<% end %>
 
