--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -9,7 +9,7 @@
 <% @twittest_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_overall %></span>
-		<%= user.name %>
+		<%= user.display_name %>
 	</div>
 <% end %>
 
@@ -19,7 +19,7 @@
 <% @myschool_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_in_school %></span>
-		<%= user.name %>
+		<%= user.display_name %>
 	</div>
 <% end %>
 
