--- a/app/views/shared/_score_menu.html.erb
+++ b/app/views/shared/_score_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="whole-page-header">
-	<h1><%= current_user.name %>'s Score</h1>	
+	<h1><%= current_user.display_name %>'s Score</h1>	
 	<ul id="settings_nav" class="tabs" role="navigation">
 		<li <% if request.request_uri == votesreal_path %>class="active"<% end %>><%= link_to "My Votes on Real Tweets", votesreal_path %></li>
 		<li <% if request.request_uri == votesfake_path %>class="active"<% end %>><%= link_to "My Votes on Fake Tweets", votesfake_path %></li>
