--- a/app/views/shared/_vote_item.html.erb
+++ b/app/views/shared/_vote_item.html.erb
@@ -1,5 +1,5 @@
 <div>
-	<%= vote_item.voter.name %> voted <%= TuringUser.find_by_id(vote_item.vote).name %>
+	<%= vote_item.voter.display_name %> voted <%= TuringUser.find_by_id(vote_item.vote).name %>
 	
 	
 </div>
