--- a/app/views/users/_my_profile_menu.html.erb
+++ b/app/views/users/_my_profile_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="whole-page-header">
-	<h1><%= current_user.name %>'s Profile</h1>	
+	<h1><%= current_user.display_name %>'s Profile</h1>	
 	<ul id="settings_nav" class="tabs" role="navigation">
 	<li <% if (request.request_uri == my_profile_path or request.request_uri == update_profile_path) %>class="active"<% end %>><%= link_to "Account details", my_profile_path %></li>	
 	</ul>
