Remove tips from score pages

--- a/app/views/pages/votesreal.html.erb
+++ b/app/views/pages/votesreal.html.erb
@@ -68,18 +68,12 @@
 			</div>
 		<% end %>
 	</div>
-	<div class="whole-page right-section">
+	<div class="whole-page right-section" style="min-height: 300px;">
 		<h3>This Section</h3>
 		<p>
 			This chart show your progress on correctly identifying when someone is tweeting as themselves.
 		</p>
-		<hr />
-		<h3>Tips</h3>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida mi eget est 
-			vestibulum hendrerit. Quisque tempor dolor eget quam volutpat venenatis. Vestibulum 
-			ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis 
-			natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-		</p>
+	
+	
 	</div>
 </div>
