--- a/app/views/pages/votingreal.html.erb
+++ b/app/views/pages/votingreal.html.erb
@@ -84,19 +84,13 @@
 			
 
 			</div>
-			<div class="whole-page right-section">
+			<div class="whole-page right-section" style="min-height: 300px;">
 				<h3>This Section</h3>
 				<p>
 						This chart shows your progress on how well you are at convincing other people when you are tweeting as yourself.
 				</p>
 
-				<hr>
-				<h3>Tips</h3>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida mi eget est 
-					vestibulum hendrerit. Quisque tempor dolor eget quam volutpat venenatis. Vestibulum 
-					ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis 
-					natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-				</p>
+				
+			
 			</div>
 		</div>
