Commit before release

--- a/app/views/pages/_home_signed_out.html.erb
+++ b/app/views/pages/_home_signed_out.html.erb
@@ -177,16 +177,16 @@
 						  <div class="micropost">
 						    <div>
 								<span class="tweeted-on">Tweeted 4 hours ago</span>
-								<span class="tweeted-as">Student</span>
+								<span class="tweeted-as">Twitbot</span>
 
 							</div>
 							<div class="tweeted-content">bike chain fell off again, gotta get it sorted, oil all over hands again</div>
 						  	<div id="votes-for-7" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(7, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(7, 1, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(7, 1, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(7, 1, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(7, 4, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(7, 4, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(7, 4, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(7, 4, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>
 							</div>
 						</div>
