--- a/app/views/schools/_fields.html.erb
+++ b/app/views/schools/_fields.html.erb
@@ -3,4 +3,7 @@
   <%= f.label :name %><br />
   <%= f.text_field :name %>
 </div>
-
+<div class="field">
+  <%= f.label :visible %> <br />
+  <%= f.check_box :visible %>
+</div>
