--- a/app/views/pages/votesreal.html.erb
+++ b/app/views/pages/votesreal.html.erb
@@ -52,6 +52,7 @@
 		<div id="pie-vote-real" style="width:225px; height:225px;"></div>
 	</div>
 	<div class="whole-page middle-section">
+		<% if current_user.school.visible %>
 		<h3>Position in Twittest</h3>
 		<% @twittest_leaderboard.each do |user| %>
 			<div>
@@ -60,6 +61,7 @@
 			</div>
 		<% end %>
 		<hr />
+		<% end %>
 		<h3>Position in <%= current_user.school.name%></h3>
 		<% @school_leaderboard.each do |user| %>
 			<div>
