--- a/app/views/pages/votingfake.html.erb
+++ b/app/views/pages/votingfake.html.erb
@@ -58,6 +58,7 @@
 			<div id="pie-tweet-fake" style="width:225px; height:225px;"></div>
 		</div>
 			<div class="whole-page middle-section">
+					<% if current_user.school.visible %>
 					<h3>Position in Twittest</h3>
 					<% @twittest_leaderboard.each do |user| %>
 						<div>
@@ -66,6 +67,7 @@
 						</div>
 					<% end %>
 					<hr />
+					<% end %>
 				<h3>Position in <%= current_user.school.name%></h3>
 					<% @school_leaderboard.each do |user| %>
 						<div>
