--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,9 @@
 <li>
   <%= gravatar_for user, :size => 30 %>
-  <%= link_to user.name, user %>
+  <%= link_to user.first_name, user %>
   <% if current_user.admin? %>
     | <%= link_to "delete", user, :method => :delete,
                                   :confirm => "You sure?",
-                                  :title => "Delete #{user.name}" %>
+                                  :title => "Delete #{user.first_name}" %>
   <% end %>
 </li>
