--- a/app/views/shared/_tweet_item.html.erb
+++ b/app/views/shared/_tweet_item.html.erb
@@ -2,9 +2,14 @@
 <div class="stream-item">
   <div class="micropost">
     <div>
+		<div style="float:left;margin-right:13px"><%=image_tag "tweet_icon.png", :style=>"height:40px; width:54px; position:relative; top:-4px" %></div>
+		<div>
 		<span class="tweeted-on">Tweeted <%= time_ago_in_words(tweet_item.created_at) %> ago</span>
 		<span class="tweeted-as"><%= tweet_item.turing_user.name %></span>
 	</div>
+	</div>
+	
+	
 	<div class="tweeted-content"><%= wrap(tweet_item.content) %></div>
 	
 	<% if tweet_item.votes.empty? and tweet_item.conversations.empty? %>
