--- a/app/views/shared/_voteontweets_item.html.erb
+++ b/app/views/shared/_voteontweets_item.html.erb
@@ -1,8 +1,11 @@
 <div class="stream-item">
   <div class="micropost">
     <div>
+		<div style="float:left;margin-right:13px"><%=image_tag "tweet_icon.png", :style=>"height:40px; width:54px; position:relative; top:-4px" %></div>
+		<div>
 		<span class="tweeted-on">Tweeted <%= time_ago_in_words(voteontweets_item.created_at) %> ago</span>
 		<span class="tweeted-as"><%= voteontweets_item.turing_user.name %></span>
+	</div>
 	</div>
 	<div class="tweeted-content"><%= wrap(voteontweets_item.content) %></div>
    	<div style="padding-top:10px;color: #999999; font-size: 11px;line-height: 15px;">
