--- a/app/views/shared/_voteontweets_item.html.erb
+++ b/app/views/shared/_voteontweets_item.html.erb
@@ -47,12 +47,19 @@
 			 <% if conversation_id %>
 			<div>
 				<% voteontweets_item.tweet_replies(current_user.id, conversation_id).each do |r| %>
-				 	<% if r.user_id == current_user.id %>
-					 <div style="text-align: right;">
-					<% else %>
-					 <div>
-					<% end %>
-					<%= r.content %></div>
+						<% if r.user_id == current_user.id %>
+						 <div style="text-align:right;height:25px; cursor:pointer; ">
+								<span style="padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe;  "> 
+						<% else %>
+						 <div style="clear:both; height:25px">
+								<%=image_tag "conversation_left.png", :style=>"height:22px; width:30px; position:relative; top:-4px" %><span style="padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe; color:#666666"> 
+						<% end %>
+						
+					<%= r.content %>
+					
+						</span>
+						<% if r.user_id == current_user.id %>	<%=image_tag "conversation_right.png", :style=>"height:22px; width:30px; position:relative; top:-4px" %><% end %>
+					</div>
 					<% end %>
 		
 			</div>
