--- a/app/views/shared/_voteontweets_item.html.erb
+++ b/app/views/shared/_voteontweets_item.html.erb
@@ -47,21 +47,27 @@
 			 <% if conversation_id %>
 			<div>
 				<% voteontweets_item.tweet_replies(current_user.id, conversation_id).each do |r| %>
-						<% if r.user_id == current_user.id %>
-						 <div style="text-align:right;height:25px; cursor:pointer; ">
-								<span style="padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe;  "> 
-						<% else %>
-						 <div style="clear:both; height:25px">
-								<%=image_tag "conversation_left.png", :style=>"height:22px; width:30px; position:relative; top:-4px" %><span style="padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe; color:#666666"> 
-						<% end %>
-						
-					<%= r.content %>
 					
-						</span>
-						<% if r.user_id == current_user.id %>	<%=image_tag "conversation_right.png", :style=>"height:22px; width:30px; position:relative; top:-4px" %><% end %>
+					<% if r.user_id == current_user.id %>
+					 	 <div style="min-height:35px; text-align:right;">
+							<span style="width:93%; display:block;">
+							<span style=" padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe;"> 
+								<%= r.content %>
+							</span>
+							</span>
+								<%=image_tag "conversation_right.png", :style=>"height:22px; width:30px; position:relative; top:-12px; float:right; vertical-align:text-top;" %>
+							
 					</div>
+					<% else %>
+					 <div style="min-height:35px">
+							<%=image_tag "conversation_left.png", :style=>"height:22px; width:30px;" %>
+							<span style="padding: 3px 7px 3px 7px; border: solid 1px; border-color: #f1f1f1; border-radius:3px; background-color:#fefefe; color:#666666">
+								<%= r.content %>
+							</span>
+					</div>	 
 					<% end %>
-		
+				
+					<% end %>	
 			</div>
 			<% end %>
 			<% if display_reply %>
