--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,12 +21,12 @@
 				<%= form_for(:session, :url => sessions_path) do |f| %>
 				 
 				    <%= f.label :email, :class => 'signin_label' %>
-				    <%= f.text_field :email, :class => 'signin_field', :style => "-moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; width:150px; border-color: #222222; background-color: rgba(255, 255, 255, 0.1); color:#f9f9f9" %>
+				    <%= f.text_field :email, :class => 'signin_field', :style => "border-radius: 3px; width:150px; border-color: #222222; background-color: #333333; color:#f9f9f9" %>
 			
 				 
 				    <%= f.label :password , :class => 'signin_label' %>
 			
-				   <%= f.password_field :password, :class => 'signin_field', :style => "-moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; width:100px; border-color: #222222; background-color: rgba(255, 255, 255, 0.1); color:#f9f9f9" %>
+				   <%= f.password_field :password, :class => 'signin_field', :style => "border-radius: 3px; width:100px; border-color: #222222; background-color: #333333; color:#f9f9f9" %>
 				    
 				<%= f.submit "Sign in", :class => 'signin_button'%>
 			
