--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -29,6 +29,6 @@
 		length = 140 - length;
 		$('#charsLeft').text(length);
 	</script>
-	<%= f.submit "Tweet", :class => 'button' %>
+	<span onclick="$('#micropost_submit').toggle();"><%= f.submit "Tweet", :class => 'button' %></span>
   </div>
 <% end %>
