Inform users of scoring system

--- a/app/views/pages/votesfake.html.erb
+++ b/app/views/pages/votesfake.html.erb
@@ -84,6 +84,13 @@
 			<p>
 				This chart show your progress on correctly identifying when someone is tweeting as another person.
 			</p>
+				<h3>Calculating Your Score</h3>
+				<p>
+					You positively score points every time you correctly identify when another Twittest user
+					is fake tweeting under an identity. If you're not fooled, but don't choose the right identity, then 
+					you gain a partial credit.  You're deducted points if you fail to spot when a user is tweeting under a 
+					fake identity, and you're completely fooled.
+				</p>
 
 		
 		</div>
