--- a/app/views/pages/votesreal.html.erb
+++ b/app/views/pages/votesreal.html.erb
@@ -75,6 +75,13 @@
 		<p>
 			This chart show your progress on correctly identifying when someone is tweeting as themselves.
 		</p>
+		<hr />
+		<h3>Calculating Your Score</h3>
+		<p>
+			You positively score points every time you correctly identify when another Twittest user
+			is tweeting as themselves.  You are deducted points when you fail to identify a user who is tweeting under
+			their own identity.	
+		</p>
 	
 	
 	</div>
