--- a/app/views/pages/votingfake.html.erb
+++ b/app/views/pages/votingfake.html.erb
@@ -82,9 +82,14 @@
 			<div class="whole-page right-section" style="min-height: 300px;">
 				<h3>This Section</h3>
 				<p>
-						This chart show your progress on how well you are at fooling other people when you are tweeting as another person.
+					This chart show your progress on how well you are at fooling other people when you are tweeting as another person.
 				</p>
-
+				<h3>Calculating Your Score</h3>
+				<p>
+					You positively score points every time you manage to fool another user and they vote for the identity you're 
+					fake tweeting as, and a small credit is awarded for partially fooling a user.  You're deducted points if other users
+					see through your fakery and correctly identify you as the tweeter.
+				</p>
 			
 			
 			</div>
