--- a/app/views/pages/votingreal.html.erb
+++ b/app/views/pages/votingreal.html.erb
@@ -81,16 +81,17 @@
 							<%= user.display_name %>
 						</div>
 					<% end %>
-
-			
-
 			</div>
 			<div class="whole-page right-section" style="min-height: 300px;">
 				<h3>This Section</h3>
 				<p>
 						This chart shows your progress on how well you are at convincing other people when you are tweeting as yourself.
 				</p>
-
+				<h3>Calculating Your Score</h3>
+				<p>
+					You positively score points every time someone agrees it's you when you are tweeting as yourself.  You're deducted
+					points if you fail to convince the person voting, and they instead select another Twittest identity.
+				</p>
 				
 			
 			</div>
