--- a/app/views/shared/_activity_menu.html.erb
+++ b/app/views/shared/_activity_menu.html.erb
@@ -1,8 +1,8 @@
 <ul id="settings_nav" class="tabs" role="navigation">
-	<li <% if (request.request_uri == activityone_path) %>class="active"<% end %>><%= link_to "Activity 1 - Turing Test Groups", activityone_path %></li>
-	<li <% if (request.request_uri == activitytwo_path) %>class="active"<% end %>><%= link_to "Activity 2 - Tweet Cards", activitytwo_path %></li>
-	<li <% if (request.request_uri == activitythree_path) %>class="active"<% end %>><%= link_to "Activity 3 - Identity Play", activitythree_path %></li>
-	<li <% if (request.request_uri == activityfour_path) %>class="active"<% end %>><%= link_to "Activity 4 - Logging and Trial Twittest", activityfour_path %></li>
+	<li <% if (request.fullpath == activityone_path) %>class="active"<% end %>><%= link_to "Activity 1 - Turing Test Groups", activityone_path %></li>
+	<li <% if (request.fullpath == activitytwo_path) %>class="active"<% end %>><%= link_to "Activity 2 - Tweet Cards", activitytwo_path %></li>
+	<li <% if (request.fullpath == activitythree_path) %>class="active"<% end %>><%= link_to "Activity 3 - Identity Play", activitythree_path %></li>
+	<li <% if (request.fullpath == activityfour_path) %>class="active"<% end %>><%= link_to "Activity 4 - Logging and Trial Twittest", activityfour_path %></li>
 </ul>
 </ul>
 
