--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,9 @@
 			<ul>
 			<% if signed_in? %>
 				<li><%= link_to "Home", root_path %></li>	
-				<li><%= link_to "My Score", votesreal_path %></li>
+				<% if current_user.has_voted %>
+					<li><%= link_to "My Score", votesreal_path %></li>
+				<% end %>
 				<li><%= link_to "My Profile", my_profile_path %></li>
 				<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
 			<% else %>
