--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -3,35 +3,40 @@
 	<h2>My Score</h2>
 </div>
 
-<hr />
-<% if current_user.school.visible %>
-<h2>Position overall in Twittest: <%= current_user.position_overall %></h2>
-<% @twittest_leaderboard.each do |user| %>
+
+<% if current_user.has_voted %>
+	<hr />
+	<% if current_user.school.visible %>
+	<h2>Position overall in Twittest: <%= current_user.position_overall %></h2>
+	<% @twittest_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_overall %></span>
 		<%= user.display_name %>
 	</div>
-<% end %>
-<hr />
-<% end %>
+	<% end %>
+	<hr />
+	<% end %>
 
-<h2>Position in my school: <%= current_user.position_in_school %></h2>
-<% @myschool_leaderboard.each do |user| %>
+	<h2>Position in my school: <%= current_user.position_in_school %></h2>
+	<% @myschool_leaderboard.each do |user| %>
 	<div>
 		<span style="float:right"><%= user.position_in_school %></span>
 		<%= user.display_name %>
 	</div>
-<% end %>
+	<% end %>
 
-<hr />
+	<hr />
 
-<% if current_user.school.visible %>
-<h2>Position of my School in Twittest: <%= current_user.school.position_overall %></h2>
-<% @school_leaderboard.each do |school| %>
+	<% if current_user.school.visible %>
+	<h2>Position of my School in Twittest: <%= current_user.school.position_overall %></h2>
+	<% @school_leaderboard.each do |school| %>
 	<div>
 		<span style="float:right"><%= school.position_overall %></span>
 		<%= school.name %>
 	</div>
+	<% end %>
+	<% end %>
+<% else %>
+	<hr />
+	Please vote on a tweet to view the leader-boards
 <% end %>
-<% end %>
-
