--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,10 @@
 <footer>
   	<div class="gold-bar"></div>
+	<nav>
+    <ul>
+      <li><%= link_to "About", about_path %></li>
+      <li><%=link_to "Teachers Activity Pack", activityone_path %></li>
+	 <li><%=link_to "Register Interest", about_path %></li>
+</ul>
+  </nav>
 </footer>
