--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -1,5 +1,5 @@
 <div>
-	<span style="float:right"><h2><%= current_user.score %></h2></span>
+	<span style="float:right"><h2><%= current_user.total_score %></h2></span>
 	<h2>My Score</h2>
 </div>
 
