Report Tweet tracking

--- a/app/views/pages/reported_users.html.erb
+++ b/app/views/pages/reported_users.html.erb
@@ -12,6 +12,9 @@
 			This page shows students who have had 3 of their tweets flagged with inappropriate content.  As a result they are no longer a 
 			trusted user and their tweets will require moderation before being visible on the site.
 		</p>
+		<p>
+			You can choose to penalise a student if you deem their content to be offensive to others, and in doing so, you will deduct 50 points from their total score.
+		</p>
 		<hr />
 		
 	
