--- a/app/views/shared/_trusted_item.html.erb
+++ b/app/views/shared/_trusted_item.html.erb
@@ -7,8 +7,8 @@
 	<div class="tweeted-content">
 			<span style="color: #999999; font-size: 11px;line-height: 15px;">
 				<span style="float:right">	
-				<%= button_to "Trust User", { :controller => "users", :action => "approve", :user => {:user_id => trusted_item.id,}} ,:form_class => "button_to_link_form", :class=>'button_to_link',:method => :post  %>
-				<%= button_to "Moderate User", { :controller => "users", :action => "moderate", :user => {:user_id => trusted_item.id,}} ,:form_class => "button_to_link_form", :class=>'button_to_link',:method => :post  %>
+				<%= button_to "Trust Tweets", { :controller => "users", :action => "approve", :user => {:user_id => trusted_item.id,}} ,:form_class => "button_to_link_form", :class=>'button_to_link',:method => :post  %>
+				<%= button_to "Moderate Tweets", { :controller => "users", :action => "moderate", :user => {:user_id => trusted_item.id,}} ,:form_class => "button_to_link_form", :class=>'button_to_link',:method => :post  %>
 				</span>
 			</span>
 			<% if trusted_item.is_trusted %>
