new scoring weightings

--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -1,6 +1,14 @@
 <div>
 	<span style="float:right"><h2><%= current_user.total_score %></h2></span>
 	<h2>My Score</h2>
+	<P>We've changed the scoring system!</p>
+
+	<p>There are now big bonuses for tweeting as, and spotting the real celebrities, teachers and chatbots.
+	And there are penalties for just voting student on everything you see.</p>
+	<p>So, think about how you tweet and vote!</p>
+
+	<p>And: if you can find a way to game the new scoring system,
+	we do have another idea up our sleeves ...</p>
 </div>
 
 
